--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block meta %}
+<meta name="description" content="Login to your account on LiG, the platform for research , computers, workstations and ganming laptops.">
+<meta name="keywords" content="login, account, research, academic, LiG">
+{% endblock %}
 
 {% block content %}
 
