--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% load socialaccount %}
+{% block meta %}
+<meta name="description" content="Create an account on LiG, the platform for research, computers, workstations, and gaming laptops.">
+<meta name="keywords" content="register, account, research, academic, LiG">
+{% endblock %}
+
+{% block title %}Register | LiG{% endblock %}
+
 
 {% block content %}
 
