--- a/templates/hardware/laptop.html
+++ b/templates/hardware/laptop.html
@@ -27,8 +27,10 @@
                 
                 <div class="col-md-3">
                     <div class="card card-product-grid">
-                        <a href="{{ product.get_url }}" class="img-wrap"> 
-                            <img src="{{ product.images.url }}" class="img-fluid"> 
+                        <a href="{{ product.get_url }}" class="product-link">
+                            <img src="{{ product.primary_image_url }}" 
+                                 alt="{{ product.product_name }}" 
+                                 class="product-image">
                         </a>
                         <figcaption class="info-wrap">
                             <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
